<resources>
    <string name="app_name">Ourcabby</string>
    <string name="app_website">www.Ourcabby.com</string>
    <string name="appname"><font fgcolor="#ffffffff">Ourcabby</font></string>
    <string name="menu"><font fgcolor="#ffffffff">MENU</font></string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="condition">Terms &amp; Conditions</string>
    <string name="privacy">Privacy &amp; Policy</string>
    <string name="cvc">CVC</string>
    <string name="cardNumber">Card Number</string>
    <string name="save">SAVE</string>
    <string name="back">BACK</string>
    <string name="backButton">Back</string>
    <string name="skip">SKIP</string>
    <string name="nocabs">No Cabs</string>
    <string name="currencuSymbol">₹</string>
    <string name="distanceUnit">Km</string>
    <string name="registeron">Register on</string>
    <string name="profileLogout">Your profile is rejected by our admin</string>
    <string name="next">NEXT</string>
    <string name="phone">PHONE(09121112222)</string>
    <string name="zipcode">ZIPCODE</string>
    <string name="register">REGISTER</string>
    <string name="apply">APPLY</string>
    <string name="progressMessage">Adding card..</string>
    <string name="validationErrors">Validation Errors</string>
    <string name="edit">EDIT</string>
    <string name="imagedire">imagedire</string>
    <string name="imagefilename">Ourcabby img</string>
    <string name="pay_cash">Pay with cash</string>
    <string name="pay_card">Pay with card</string>
    <string name="str_atv_places">Appointment location</string>
    <string name="later">LATER</string>
    <string name="now">NOW</string>
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="rate_googlePlay">RATE US IN GOOGLE PLAY</string>
    <string name="like_onFacebook"> LIKE US ON FACEBOOK</string>
    <string name="instagram"> FOLLOW US ON INSTAGRAM</string>
    <string name="telegram"> JOIN Ourcabby TELEGRAM CHANNEL</string>
    <string name="legal">LEGAL</string>
    <string name="choosecountry">Choose Country</string>
    <string name="scan_credit_card">SCAN YOUR CREDIT CARD</string>
    <string name="enter_credit_card">Enter credit card information</string>
    <string name="not_a_valid_card"> You did not enter a valid card</string>
    <string name="progress">progress</string>
    <string name="fill_all_fields">Please fill all the required information.</string>
    <string name="requestTimeout">Request Timeout </string>
    <string name="Card_Added_Successfully">Card Added Successfully!!</string>
    <string name="server_error">Network Error. Retry.</string>
    <string name="invalid_email">Please enter valid Email ID</string>
    <string name="enter_verificationcode">Enter the verification code.</string>
    <string name="enter_correct_verification">Enter the valid verification code.</string>
    <string name="add_credit_card">ADD CREDIT CARD</string>
    <string name="credit_card_num">Credit Card Number</string>
    <string name="mm">MM</string>
    <string name="yyyy">YYYY</string>
    <string name="cvv">CVV</string>
    <string name="error">Error:</string>
    <string name="ok">OK</string>
    <string name="no_bookings_for_day">No Bookings found in this day</string>
    <string name="select_payment">ADD CARD</string>
    <string name="deleting_card">Deleting card. Please wait</string>
    <string name="card_removed">Card Removed Successfully</string>
    <string name="card_info">CARD INFO</string>
    <string name="expiry">EXP</string>
    <string name="delete_card">Delete Card</string>
    <string name="share_eta">SHARE ETA</string>
    <string name="contact_driver">CONTACT DRIVER</string>
    <string name="cancel_trip">CANCEL TRIP</string>
    <string name="fare_quote">FARE ESTIMATE</string>
    <string name="bookNow">BOOK NOW</string>
    <string name="promo_code">PROMO CODE</string>
    <string name="enter_promo_code">Enter Promo Code</string>
    <string name="pickup_location">Pickup Location</string>
    <string name="drop_location">Dropoff Location</string>
    <string name="fare_may_vary_line1">Fare may vary due to traffic, weather</string>
    <string name="fare_may_vary_line2">and other factors. Estimate doesnot</string>
    <string name="fare_may_vary_line3">include discount or promotions</string>
    <string name="new_destination">ENTER A NEW DESTINATION</string>
    <string name="network_connection_fail">Network connection fail</string>
    <string name="enter_valid_email">Please enter a valid email id</string>
    <string name="email_empty">Please enter your Email Id.</string>
    <string name="mobile_empty">Please enter your mobile no.</string>
    <string name="mobile_empty_check">Please add 0 before your mobile number</string>
    <string name="mobileTen">Please add 11 digit mobile number</string>
    <string name="passValidation">Your password should contain atleast 6 characters</string>
    <string name="please_wait">Please Wait…</string>
    <string name="mobileInvalid">Please enter a valid mobile Number</string>
    <string name="forgot_password">FORGOT PASSWORD?</string>
    <string name="email">Email*</string>
    <string name="by_create">By creating account you agree our</string>
    <string name="minute">MIN</string>
    <string name="minutes">Minutes</string>
    <string name="email_registered">Email already registered choose other.</string>
    <string name="password">PASSWORD</string>
    <string name="passwordsignup">Password*</string>
    <string name="referal">Referral code (optional)</string>
    <string name="confirm_password">CONFIRM PASSWORD</string>
    <string name="sign_in">SIGN IN</string>
    <string name="user_name">MOBILE NUMBER</string>
    <string name="login">LOGIN</string>
    <string name="cancel_account_creation">CANCEL ACCOUNT CREATION</string>
    <string name="cancel_account_creation_alert">Are you sure you want to cancel? Your information will not be saved.</string>
    <string name="cancelYourbooking">Are you sure you want to cancel later booking?</string>
    <string name="password_strength_low">Password strength: Low</string>
    <string name="signedUp">You have successfully signed up</string>
    <string name="password_strength_low_message">Please set the password which contain a mixture of alphabets and numbers.</string>
    <string name="first_name_empty">Please enter your first name.</string>
    <string name="message">Message</string>
    <string name="last_name_empty">Last name field is empty.</string>
    <string name="password_empty">Please enter your password</string>
    <string name="password_sould_not_empty">Password field should not be empty.</string>
    <string name="mobile_registered">Mobile already registered choose other.</string>
    <string name="phone_num_empty">Phone.No field is empty.</string>
    <string name="zipcode_empty">Zipcode field is empty.</string>
    <string name="confirm_password_empty">"Confirm Password field is empty."</string>
    <string name="passwords_not_match">confirm password not matching with password entry.</string>
    <string name="accept_terms_conditions">"Please accept Terms and Conditions."</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="first_name">FIRST NAME</string>
    <string name="firstName">First Name*</string>
    <string name="last_name">LAST NAME</string>
    <string name="lastName">Last Name</string>
    <string name="submit">Submit</string>
    <string name="driver_cancelled_booking">Driver Cancelled Booking Request</string>
    <string name="select_date_time">Select Date and Time</string>
    <string name="select_payment_type">SELECT PAYMENT TYPE</string>
    <string name="select_dropoff_location">Please select the dropoff location</string>
    <string name="driver_phone_num_not_available">Driver number not available</string>
    <string name="cancelling_trip">Cancelling Trip</string>
    <string name="gps_settings">GPS settings</string>
    <string name="gps_alert_message">Location on high accuracy mode required. Turn this feature ON from Location Services in your phone settings</string>
    <string name="network_alert_message">Please check your Internet connection and try again.</string>
    <string name="settings">Settings</string>
    <string name="go_to_settings">go to settings</string>
    <string name="network_settings">Network settings</string>
    <string name="wifi_settings">Wifi settings</string>
    <string name="cancel">Cancel</string>
    <string name="card">CARD</string>
    <string name="cash">CASH</string>
    <string name="promo_cancel">CANCEL</string>
    <string name="credit_cards_not_found">Payment method does not contain any credit card details. Please go to Payment menu and add the card details.</string>
    <string name="dist">Dist:</string>
    <string name="eta">TIME:</string>
    <string name="error_message">Error. Please Retry!</string>
    <string name="set_pickup_location">SET PICKUP LOCATION</string>
    <string name="set_drop_location">SET DROP LOCATION</string>
    <string name="miles">KM</string>
    <string name="no_drivers_found">NO DRIVERS FOUND</string>
    <string name="confirmation">CONFIRMATION</string>
    <string name="request_pickup">REQUEST PICKUP</string>
    <string name="request">REQUEST</string>
    <string name="paymeny_type">PAYMENT TYPE</string>
    <string name="addCard">Add Card</string>
    <string name="driver_on_the_way">DRIVER ON THE WAY</string>
    <string name="distance">DISTANCE</string>
    <string name="surge_price">SURGE</string>
    <string name="min_fair">MIN FARE</string>
    <string name="max_size">MAX SIZE</string>
    <string name="dispute_msg">Dispute Message?</string>
    <string name="provide_valid_reason_for_dispute">Please provide us valid reason</string>
    <string name="pls_enter_promo_code">Please enter promo code</string>
    <string name="alert">Alert:</string>
    <string name="skip_review_details">Are you sure to skip the review details</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="fare">Fare</string>
    <string name="receipt">RECEIPT</string>
    <string name="surgePrice">Surge Pricing</string>
    <string name="surgeText">Fares have increased,click on I agree for higher fares to get a taxi or click on cancel to go back.</string>
    <string name="notifyi">NOTIFYI ME ONCE SURGE ENDS</string>
    <string name="acceptHigherRate">I ACCEPT HIGHER PRICE</string>
    <string name="dispute">Dispute</string>
    <string name="booking_id">Booking ID:</string>
    <string name="duration">DURATION</string>
    <string name="distance1">DISTANCE</string>
    <string name="select">Select</string>
    <string name="avg_speed">AVG SPEED</string>
    <string name="rate_your_journey">RATE YOUR RIDE</string>
    <string name="write_review">Leave a comment</string>
    <string name="done">DONE</string>
    <string name="summary">Summary</string>
    <string name="logout_alert_message">Are you sure to logout?</string>
    <string name="selecto_photo">Select Photo From</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="mobile_no">Mobile No*</string>
    <string name="mobile_no_for_register">Mobile number*</string>
    <string name="selectCountry">Select Country</string>
    <string name="requesting">Requesting...</string>
    <string name="cancelling">Cancelling...</string>
    <string name="powered_by_Google">powered by Google</string>
    <string name="everyoneTaxi">EVERYONE\'S PRIVATE TAXI</string>
    <string name="sentVerification">We have sent a verification code on your</string>
    <string name="number">number</string>
    <string name="verificationCOde">Verification Code</string>
    <string name="didnotSent">Did not receive it?</string>
    <string name="messageAgain">Message again</string>
</resources>