<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="#ffffff">
    <RelativeLayout
        android:id="@+id/su_two_navigation_relative_add"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:background="@color/background" >

        <Button
            android:id="@+id/su_two_next_button_add"
            android:layout_width="wrap_content"
            android:layout_height="?android:attr/actionBarSize"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            android:text="@string/save" 
            android:textColor="@drawable/white_to_black_text"
            android:layout_centerVertical="true"
            android:background="@drawable/back_button"
             android:gravity="center"/>

        <Button
            android:id="@+id/su_two_back_button_add"
            android:layout_width="wrap_content"
            android:layout_height="?android:attr/actionBarSize"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:text="@string/back"
            android:textColor="@drawable/white_to_black_text"
            android:background="@drawable/back_button"
            android:layout_centerVertical="true"
           />
        <TextView
            android:id="@+id/su_two_nav_text_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:text="@string/add_credit_card"
            android:textColor="#ffffff" 
            android:textAppearance="?android:attr/textAppearanceMedium"/>
    </RelativeLayout>
    
    <RelativeLayout 
        android:id="@+id/relative_credit_card_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:layout_below="@id/su_two_navigation_relative_add"
        android:layout_marginTop="10dp"        
        >
        
        <EditText 
            android:id="@+id/add_credit_card_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
          	android:inputType="numberDecimal"
          	android:hint="@string/credit_card_num"
            android:maxLength="16" 
            android:textColor="#000000"
            android:textColorHint="#808080"
            />
        <LinearLayout 
            android:id="@+id/month_year_cvv_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/add_credit_card_number"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal"
            android:weightSum="2"
            >
			<EditText 
			    android:id="@+id/add_card_month"
			    android:layout_width="0dp"
			    android:layout_height="wrap_content"
			    android:layout_weight="0.5"
			    android:textColor="#000000"
			    android:maxLength="2" 
            	android:textColorHint="#808080"
            	android:inputType="numberDecimal"
          		android:hint="@string/mm"
			    />   
			    <EditText 
			    android:id="@+id/add_card_year"
			    android:layout_width="0dp"
			    android:layout_height="wrap_content"
			    android:layout_weight="0.5"
			    android:textColor="#000000"
			    android:maxLength="4" 
            	android:textColorHint="#808080"
            	android:inputType="numberDecimal"
          		android:hint="@string/yyyy"
			    /> 
				<EditText 
			    android:id="@+id/add_card_cvv"
			    android:layout_width="0dp"
			    android:layout_height="wrap_content"
			    android:layout_weight="1"
			    android:textColor="#000000"
			    android:maxLength="3" 
            	android:textColorHint="#808080"
            	android:inputType="numberDecimal"
          		android:hint="@string/cvv"
			    />     
        </LinearLayout>
    </RelativeLayout>
    
    <Button
        android:id="@+id/su_two_scan_button_add_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/scan_credit_card"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:onClick="onScanPress"
        android:background="@drawable/card_scan_button"
        android:textColor="@drawable/white_to_black_text" />

    <ImageView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relative_credit_card_details"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:src="@drawable/addcard_or_divider"/>
    

</RelativeLayout>
