<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/lightgrey1">
    <RelativeLayout
        android:id="@+id/rl_navigation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </RelativeLayout>
    <TextView
        android:id="@+id/txt_private_driver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/everyoneTaxi"
        android:textColor="#000000" />
    <TextView
        android:id="@+id/txt_roadyo_net"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/txt_private_driver"
        android:text="@string/app_website"
        android:textColor="#3399ff"
        android:linksClickable="true" />

    <LinearLayout
        android:id="@+id/about_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_below="@id/txt_roadyo_net">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="?android:actionBarSize"
            android:id="@+id/btn_rate_in_google_play"
            android:background="@drawable/background_selector"
            android:text="@string/rate_googlePlay"
            android:gravity="center|start"
            android:paddingStart="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingEnd="20dp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/lightgrey"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="?android:actionBarSize"
            android:id="@+id/instagram"
            android:background="@drawable/background_selector"
            android:text="@string/like_onFacebook"
            android:gravity="center|start"
            android:paddingStart="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingEnd="20dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/lightgrey"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="?android:actionBarSize"
            android:id="@+id/btn_legal"
            android:background="@drawable/background_selector"
            android:text="@string/legal"
            android:gravity="center|start"
            android:paddingStart="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingEnd="20dp"/>


    </LinearLayout>



</RelativeLayout>
